# lenovo_throttled

./: Cargo.toml  README.md
src/: main.rs
