[package]
name = "lenovo_throttled"
version = "0.1.0"
authors = ["Gino <onigino@protonmail.com>"]

[dependencies]
config = "0.9.0"
docopt = "1.0.0"
dbus = "0.6.2"
glob = "0.2.11"
nix = "0.11.0"
num_cpus = "1.8.0"
memmap = "0.6.2"
mio = "0.6.5"
bytebuffer = "0.2.1"
psutil = { git = "https://github.com/borntyping/rust-psutil" }

